Eyescanner case: fixed stretched images

--- a/src/cases/eyescanner.sass
+++ b/src/cases/eyescanner.sass
@@ -130,6 +130,7 @@
     .appImage
       width: 50%
       opacity: 0
+      align-self: center
 
       @media screen and (min-width: 850px)
         width: 25%
